Ajustes no design (cores da navbar e botões)

--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
         <style>
             nav {
                 width: 100%;
-                background-color: #333;
+                background-color: #05316b;
                 padding: 20px 20px;
                 box-sizing: border-box;
             }
@@ -29,7 +29,7 @@
             }
 
             nav ul li a:hover {
-                background-color: #575757;
+                background-color: #375c8dea;
                 border-radius: 4px;
             }
 
