--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
                 padding: 0;
                 box-sizing: border-box;
                 font-family: 'Arial', sans-serif;
-                background-color: #f4f7fb; /* Cor de fundo suave */
+                background-color: #f4f7fb; 
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -26,7 +26,7 @@
             }
 
             button {
-                background-color: red;
+                background-color: #2e66b1;
                 color: white;
                 font-size: 1.2rem;
                 padding: 8px 30px;
@@ -38,12 +38,12 @@
             }
 
             button:hover {
-                background-color: #b30012;
+                background-color: #05316b;
                 transform: scale(1.05); 
             }
 
             button:active {
-                background-color: #b30012;
+                background-color: #05316b;
             }
 
             @media (max-width: 768px) {
