Adição da opção de download Power Bi

--- a/navbar.html
+++ b/navbar.html
@@ -52,6 +52,7 @@
                 <li><a href="cadastroAtividade.php">Cadastro</a></li>
                 <li><a href="consultaAtividade.php">Consulta</a></li>
                 <li><a href="gerarCSV.php">Gerar CSV</a></li>
+                <li><a href="RelatorioAtividadesProjeto.pbix" download="RelatorioAtividadesProjeto.pbix">Ver Power BI</a></li>
             </ul>
         </nav>
     </body>
